@@ -259,7 +259,7 @@ namespace OpenBabel
     return _values;
   }
 
-  void OBFloatGrid::SetVals(std::vector<double> vals)
+  void OBFloatGrid::SetVals(const std::vector<double> & vals)
   {
     int size = _xdim*_ydim*_zdim;
     _values.clear();
